examples/FCCee/higgs/tautau/xsec/ecm240/ktN-tag/sub/err/condor_1806095.2491.err
----> INFO: Loading analyzers from libFCCAnalyses...
----> INFO: Loading analysis file:
            /work/awiedl/FCCAnalyses/examples/FCCee/higgs/tautau/xsec/ecm240/ktN-tag/QQ/analysis_stage2_QQHH.py
----> INFO: Multithreading enabled. Running over 4 threads
----> INFO: Loading functions.h...
----> INFO: Running over files provided in command line argument...
----> INFO: Creating dataframe object from files:
            	- /ceph/awiedl/FCCee/HiggsCP/ecm240/stage1_241202/p8_ee_WW_ecm240/chunk_1404.root	
            - /ceph/awiedl/FCCee/HiggsCP/ecm240/stage1_241202/p8_ee_WW_ecm240/chunk_3388.root	
            - /ceph/awiedl/FCCee/HiggsCP/ecm240/stage1_241202/p8_ee_WW_ecm240/chunk_3421.root	
            - /ceph/awiedl/FCCee/HiggsCP/ecm240/stage1_241202/p8_ee_WW_ecm240/chunk_2461.root	
            - /ceph/awiedl/FCCee/HiggsCP/ecm240/stage1_241202/p8_ee_WW_ecm240/chunk_1840.root	
            - /ceph/awiedl/FCCee/HiggsCP/ecm240/stage1_241202/p8_ee_WW_ecm240/chunk_1754.root	
            - /ceph/awiedl/FCCee/HiggsCP/ecm240/stage1_241202/p8_ee_WW_ecm240/chunk_230.root	
            - /ceph/awiedl/FCCee/HiggsCP/ecm240/stage1_241202/p8_ee_WW_ecm240/chunk_2589.root	
            - /ceph/awiedl/FCCee/HiggsCP/ecm240/stage1_241202/p8_ee_WW_ecm240/chunk_2269.root	
            - /ceph/awiedl/FCCee/HiggsCP/ecm240/stage1_241202/p8_ee_WW_ecm240/chunk_3297.root	

----> INFO: Number of events:
            	- original: 1,000,000
            	- local:    1,000,000
----> INFO: Output file path:
            /ceph/awiedl/FCCee/HiggsCP/ecm240/ktN-tag/stage2/QQ/HH/p8_ee_WW_ecm240/chunk_24.root
input_line_119:2:102: error: use of undeclared identifier 'TagJet_kt4_cleanup'
auto func0(ROOT::VecOps::RVec<float>& var0, ROOT::VecOps::RVec<float>& var1){return var1[var0>0.5 && TagJet_kt4_cleanup==1]
                                                                                                     ^
----> ERROR: During the execution of the analysis file exception occurred:
             Template method resolution failed:
               ROOT::RDF::RInterface<ROOT::Detail::RDF::RLoopManager,void> ROOT::RDF::RInterface<ROOT::Detail::RDF::RLoopManager,void>::Define(basic_string_view<char,char_traits<char> > name, basic_string_view<char,char_traits<char> > expression) =>
                 runtime_error: 
             RDataFrame: An error occurred during just-in-time compilation. The lines above might indicate the cause of the crash
              All RDF objects that have not run an event loop yet should be considered in an invalid state.

